# api-befordrings-applikation

./: .gitignore  docker-compose.remote.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: befordring.py  bevilling.py  citizen.py  overview.py  skoleferie.py  udskrivning.py
app/services/: bevilling_service.py  citizen_service.py
app/utils/: database.py  helper_functions.py
backend/: .env.example  Dockerfile  README.md
backend/app/: main.py
backend/app/api/: bevilling.py  citizen.py  lookup.py  overview.py
backend/app/services/: bevilling_service.py  citizen_service.py  lookup_service.py
backend/app/utils/: database.py  helper_functions.py
frontend/: package-lock.json  package.json  postcss.config.js  tailwind.config.ts
frontend/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
frontend/.svelte-kit/types/: route_meta_data.json
frontend/.svelte-kit/types/src/routes/: $types.d.ts  proxy+layout.ts
frontend/src/: app.css  app.d.ts
frontend/src/lib/: tableColumnConfig.ts  tableColumnSetup.ts  types.ts
frontend/src/lib/components/: BevillingTable.svelte  DataTable.svelte  KoerselsraekkeTable.svelte
frontend/src/lib/components/cells/: ActionCell.svelte  DeleteCell.svelte  EditCell.svelte  InputCell.svelte  StatusBadgeCell.svelte
frontend/src/lib/data/: products.json
frontend/src/routes/: +layout.svelte  +layout.ts  +page.server.js  +page.svelte  test.json
frontend/src/routes/nye-ansoegninger/: +page.svelte
frontend/src/routes/revurdering/: +page.svelte
frontend/src/routes/sagsbehandlere/: +page.server.ts  +page.svelte
(+10 files in other folders)
